tests/negative/neg_own_observe_move.safe
-- Test: neg_own_observe_move
-- Description: Moving an owner while an observer is active.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a-a:ae729065
-- Expected: REJECT observe_mutation

package Observe_Move_Test

   type Config is record
      Rate : Natural;


   type Config_Ptr is access Config;

   function Move_While_Observed
      Owner    : Config_Ptr = new ((Rate = 100) as Config);
      Target   : Config_Ptr = null;
      Observer : access constant Config = Owner.Access;

      Target = Owner;  -- ERROR: move while observe is active



